Fixing extension URL and name

--- a/source/pages/LAB_LB_FHIR_mapping_and_gaps_for_IG_files/sheet003.htm
+++ b/source/pages/LAB_LB_FHIR_mapping_and_gaps_for_IG_files/sheet003.htm
@@ -1,5 +1,4 @@
-<html xmlns:v="urn:schemas-microsoft-com:vml"
-xmlns:o="urn:schemas-microsoft-com:office:office"
+<html xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
@@ -81,12 +80,12 @@ else
   width:89pt'>Study ID or Number</td>
   <td class=xl67 width=164 style='border-top:none;border-left:none;width:123pt'>Observation<span
   style='mso-spacerun:yes'> </span></td>
-  <td class=xl65 width=207 style='border-top:none;border-left:none;width:155pt'>extension-event-researchstudy<span
+  <td class=xl65 width=207 style='border-top:none;border-left:none;width:155pt'>extension-workflow-researchstudy<span
   style='mso-spacerun:yes'>  </span>(ref: ResearchStudy.identifier)</td>
   <td class=xl67 width=162 style='border-top:none;border-left:none;width:122pt'>N/A</td>
   <td class=xl67 width=207 style='border-top:none;border-left:none;width:155pt'>Observation
   extensions: <br>
-    http://build.fhir.org/extension-event-researchstudy.html<br>
+    http://build.fhir.org/extension-workflow-researchstudy.html<br>
     <br>
     http://build.fhir.org/extension-event-locationhtml</td>
   <td class=xl67 width=207 style='border-top:none;border-left:none;width:155pt'>ResearchStudy/identifier/value/@value</td>
@@ -105,7 +104,7 @@ else
   <td height=160 class=xl67 width=118 style='height:120.0pt;border-top:none;
   width:89pt'>Site ID or Number</td>
   <td class=xl67 width=164 style='border-top:none;border-left:none;width:123pt'>Observation</td>
-  <td class=xl67 width=207 style='border-top:none;border-left:none;width:155pt'>extension-event-researchStudy
+  <td class=xl67 width=207 style='border-top:none;border-left:none;width:155pt'>extension-workflow-researchstudy
   (ref: ResearchStudy.identifier), then ResearchStudy.site (Ref:
   Location.identifier to Location.managingOrganization Ref:
   Organization.identifier)</td>
@@ -115,7 +114,7 @@ else
   <td class=xl67 width=207 style='border-top:none;border-left:none;width:155pt'>Extensions:<span
   style='mso-spacerun:yes'>  </span><br>
     <br>
-    http://build.fhir.org/extension-event-researchstudy.html<br>
+    http://build.fhir.org/extension-workflow-researchstudy.html<br>
     <br>
     http://build.fhir.org/extension-event-location.html<br>
     </td>
