--- a/source/pages/LAB_LB_FHIR_mapping_and_gaps_for_IG_files/sheet002.htm
+++ b/source/pages/LAB_LB_FHIR_mapping_and_gaps_for_IG_files/sheet002.htm
@@ -1,4 +1,5 @@
-<html xmlns:o="urn:schemas-microsoft-com:office:office"
+<html xmlns:v="urn:schemas-microsoft-com:vml"
+xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
@@ -89,12 +90,12 @@ else
   ID or Number</td>
   <td class=xl65 width=164 style='border-top:none;border-left:none;width:123pt'>Observation<span
   style='mso-spacerun:yes'> </span></td>
-  <td class=xl65 width=207 style='border-top:none;border-left:none;width:155pt'>extension-event-researchstudy<span
+  <td class=xl65 width=207 style='border-top:none;border-left:none;width:155pt'>extension-workflow-researchstudy<span
   style='mso-spacerun:yes'>  </span>(ref: ResearchStudy.identifier)</td>
   <td class=xl67 width=162 style='border-top:none;border-left:none;width:122pt'>N/A</td>
   <td class=xl65 width=207 style='border-top:none;border-left:none;width:155pt'>Observation
   extensions: <br>
-    http://build.fhir.org/extension-event-researchstudy.html<br>
+    http://build.fhir.org/extension-workflow-researchstudy.html<br>
     <br>
     http://build.fhir.org/extension-event-locationhtml</td>
   <td class=xl65 width=207 style='border-top:none;border-left:none;width:155pt'>ResearchStudy/identifier/value/@value</td>
@@ -110,12 +111,12 @@ else
   Name</td>
   <td class=xl65 width=164 style='border-top:none;border-left:none;width:123pt'>Observation<span
   style='mso-spacerun:yes'> </span></td>
-  <td class=xl65 width=207 style='border-top:none;border-left:none;width:155pt'>extension-event-researchstudy<span
+  <td class=xl65 width=207 style='border-top:none;border-left:none;width:155pt'>extension-workflow-researchstudy<span
   style='mso-spacerun:yes'>  </span>(ref: ResearchStudy.title)</td>
   <td class=xl67 width=162 style='border-top:none;border-left:none;width:122pt'>N/A</td>
   <td class=xl65 width=207 style='border-top:none;border-left:none;width:155pt'>Observation
   extensions: <br>
-    http://build.fhir.org/extension-event-researchstudy.html<br>
+    http://build.fhir.org/extension-workflow-researchstudy.html<br>
     <br>
     http://build.fhir.org/extension-event-locationhtml</td>
   <td class=xl65 width=207 style='border-top:none;border-left:none;width:155pt'>ResearchStudy/title/@value</td>
@@ -171,14 +172,14 @@ else
   <td class=xl65 width=135 style='border-top:none;border-left:none;width:101pt'>Site
   ID or Number</td>
   <td class=xl65 width=164 style='border-top:none;border-left:none;width:123pt'>Observation</td>
-  <td class=xl65 width=207 style='border-top:none;border-left:none;width:155pt'>extension-event-researchstudy<span
+  <td class=xl65 width=207 style='border-top:none;border-left:none;width:155pt'>extension-workflow-researchstudy<span
   style='mso-spacerun:yes'>  </span>(ref: ResearchStudy..site (ref:
   Location.identifier to Location.managingOrganization (Ref:
   Organization.identifier)))</td>
   <td class=xl67 width=162 style='border-top:none;border-left:none;width:122pt'>N/A</td>
   <td class=xl65 width=207 style='border-top:none;border-left:none;width:155pt'>Observation
   extensions: <br>
-    http://build.fhir.org/extension-event-researchstudy.html<br>
+    http://build.fhir.org/extension-workflow-researchstudy.html<br>
     <br>
     http://build.fhir.org/extension-event-locationhtml</td>
   <td class=xl67 width=207 style='border-top:none;border-left:none;width:155pt'>Organization/identifier/value/@value</td>
