--- a/source/pages/LAB_LB_FHIR_mapping_and_gaps_for_IG_files/sheet003.htm
+++ b/source/pages/LAB_LB_FHIR_mapping_and_gaps_for_IG_files/sheet003.htm
@@ -1,4 +1,5 @@
-<html xmlns:o="urn:schemas-microsoft-com:office:office"
+<html xmlns:v="urn:schemas-microsoft-com:vml"
+xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
@@ -187,16 +188,18 @@ else
   and contain the Sponsor defined values in Research resources.<span
   style='mso-spacerun:yes'> </span></font></td>
  </tr>
- <tr height=140 style='height:105.0pt'>
-  <td height=140 class=xl67 width=118 style='height:105.0pt;border-top:none;
+ <tr height=260 style='height:195.0pt'>
+  <td height=260 class=xl67 width=118 style='height:195.0pt;border-top:none;
   width:89pt'>Visit Name</td>
   <td class=xl67 width=164 style='border-top:none;border-left:none;width:123pt'>Observation</td>
   <td class=xl65 width=207 style='border-top:none;border-left:none;width:155pt'>encounter
   (Ref: Encounter.gap)</td>
-  <td class=xl65 width=162 style='border-top:none;border-left:none;width:122pt'>No
-  value mapped - <font class="font0">pending encounterType extension.<span
-  style='mso-spacerun:yes'>  </span>In the interim, use the
-  encounter.identifier field.</font></td>
+  <td class=xl65 width=162 style='border-top:none;border-left:none;width:122pt'>If
+  a sponsor requires the visit name, use the encounter.identifier.value field
+  to fulfill this purpose.<span style='mso-spacerun:yes'>  </span>Set the
+  encounter.identifier.type.CodeableConcept.text to 'Visit Name'.<span
+  style='mso-spacerun:yes'>  </span>Alternatively, you can use the Schedule of
+  Activities, within the Protocol (see PlanDefinition resource)</td>
   <td class=xl67 width=207 style='border-top:none;border-left:none;width:155pt'>Observation/encounter/reference/@value
   (=Encounter/identifier)</td>
   <td class=xl67 width=207 style='border-top:none;border-left:none;width:155pt'>&nbsp;</td>
@@ -393,8 +396,8 @@ else
     NF =&gt; N<br>
     NG =&gt; U</td>
  </tr>
- <tr height=160 style='height:120.0pt'>
-  <td height=160 class=xl67 width=118 style='height:120.0pt;border-top:none;
+ <tr height=220 style='height:165.0pt'>
+  <td height=220 class=xl67 width=118 style='height:165.0pt;border-top:none;
   width:89pt'>Condition Met (Y/N)</td>
   <td class=xl67 width=164 style='border-top:none;border-left:none;width:123pt'>Observation</td>
   <td class=xl67 width=207 style='border-top:none;border-left:none;width:155pt'>specimen
@@ -402,13 +405,15 @@ else
   <td class=xl67 width=162 style='border-top:none;border-left:none;width:122pt'>This
   is an 'ask on entry' question.<span style='mso-spacerun:yes'>  </span>May be
   able to determine some conditions, such as fasting, by using other
-  specimen.collection attributes (e.g., fasting status)</td>
+  specimen.collection attributes (e.g., fasting status)<span
+  style='mso-spacerun:yes'>  </span>Alternatively, obtain this information from
+  the case report form entries.</td>
   <td class=xl67 width=207 style='border-top:none;border-left:none;width:155pt'>&nbsp;</td>
   <td class=xl67 width=207 style='border-top:none;border-left:none;width:155pt'>&nbsp;</td>
   <td class=xl67 width=154 style='border-top:none;border-left:none;width:116pt'>LBCOND
   (confirmation that protocol defined condition was met - e.g. fasting)</td>
-  <td class=xl67 width=154 style='border-top:none;border-left:none;width:116pt'>Have
-  to have a way to explain what this is answering.<span
+  <td class=xl67 width=154 style='border-top:none;border-left:none;width:116pt'>Must
+  provide a way to explain what this is answering.<span
   style='mso-spacerun:yes'>  </span>May need to answer this for a particular
   test.</td>
   <td class=xl67 width=154 style='border-top:none;border-left:none;width:116pt'>N/A</td>
